# drumscript-cleaned

./: .gitignore  .pre-commit-config.yaml  .testing  .testing2  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README___backup1__BUILD_TODY_UP_REPO.md  SECURITY.md  __init__.py  branch_note  code_of_conduct.md  dev_notes.txt  drum_test_score.musicxml  drum_test_score.xml  drumscript_interactive_notebook.ipynb  for_claude__weds13may2026  gitignore  gitlog.txt  glossary.md  how_it_works.md  main.py  master_percussion_map.csv  master_percussion_map.md  midi_percussion_map.csv  pyproject.toml  pytest.ini  repository_structure.md  requirements.in  requirements.txt  test_converter.py  testing  testing__tues31march2026  tests.md  tree.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  pages.yml  publish.yml  release.yml  test_build.yml  tests.yml
audio_processor/: __init__.py  audio_loader.py  error.txt  feature_extractor.py  feature_extractor__NEW.py  onset_detector.py  tempo_detector.py  tempo_test_notes.txt  tempogram.py
data_labeller/: data_labeller.py
developer_docs/: about.md  advanced_sound_analysis101.md  conf.py  contributor_guidance.md  glossary.md  how_it_works.md  index.md  index.rst  tempo_estimation.md  testing_guidance.md
docs/: FOLDER_STRUCTURE.txt  _index.md  about.md  advanced_sound_analysis101.md  api.rst  conf.py  contributing.md  github_pages.sh  how_it_works.md  index.md  versions.json
docs/_static/: custom.css
docs/_templates/autosummary/: module.rst
docs/development/: code_of_conduct.md  contributor_guidance.md  documentation.md  testing_guidance.md
docs/guide/: cli_reference.md  configuration.md  glossary.md  installation.md  roadmap.md  security.md  usage.md
docs/guide/interactive/: DrumScript_Interactive_Notebook.ipynb  create_backing_track.ipynb  drumscript_interactive_notebook.ipynb  extract_drums.ipynb  extract_stems.ipynb  index.md  measure_tempo.ipynb  transcribe.ipynb
docs/guide/interactive/transcription/: test_track_1_transcription.json  test_track_1_transcription.mid
docs/release_notes/: 0.1.0.md  0.1.1 .md  0.1.1.md  0.1.2.md  0.1.3.md  0.1.4.md  0.1.5.md  _template.md  index.md
docs/theory/: advanced_sound_analysis101.md  bibliography.md  digital_signal_processing.md  drum_notation_guide.md  dsp_background.md  percussion_frequencies.md  sources.md  sources.txt  stem_splitting.md  tempo_estimation.md
drum_classifier/: data_preparer.py  drum_model.py  generate_score.py  init_new.py  model_trainer.md  model_trainer.py  predict.py  predict__NEW_COMPLETE_SET.py  predict__new.py  predict_log.txt  prediction_output.json
drum_classifier/docs/: neural_networks.md  predict.md
drumscript/: README.md  __init__.py  main.py  repository_structure.md
drumscript/audio_processor/: _classifier.py  audio_loader.py  feature_extractor.py  onset_detector.py  stem_splitter.py  tempo_detector.py  tempogram.py
drumscript/drum_classifier/: classify.py  current.py  generate_score.py  predict.py  prediction_output.json  profiler.py
drumscript/drum_classifier/docs/: drum_model.md  model_metrics.md  model_trainer.md  predict.md
drumscript/notation_generator/: __init__.py  _midi_exporter.py  _pdf_exporter.py  constants.py  drum_notation_tester.py  helpers.py  midi_exporter.py  pdf_exporter.py  score_builder.py  score_exporter.py  xml_exporter.py
drumscript/utils/: analyze_closed_hat_physics.py  analyze_crash_physics.py  analyze_high_tom_physics.py  analyze_kick_physics.py  analyze_low_tom_physics.py  analyze_mid_tom_physics.py  analyze_open_hat_physics.py  analyze_ride_physics.py  analyze_snare_physics.py  analyze_tom_physics.py  config.py  ffmpeg_installer.py  get_event_frequencies.py  logging.py  measure_frequency.py  measure_hat_frequency.py  measure_kick_frequency.py  measure_snare_frequency.py
drumscript/utils/research/: analyze_closed_hat_physics.py  analyze_crash_physics.py  analyze_high_tom_physics.py  analyze_kick_physics.py  analyze_low_tom_physics.py  analyze_mid_tom_physics.py  analyze_open_hat_physics.py  analyze_ride_physics.py  analyze_snare_physics.py  analyze_tom_physics.py  get_event_frequencies.py  measure_hat_frequency.py  measure_kick_frequency.py  measure_snare_frequency.py
local_tests/classification_engine/librosa/: ! Librosa functions for drum classification - ! Librosa functions for drum classification.csv  conftest.py  fundamental_frequencies_report.csv  get_fundamental_frequencies.py  test_classification_tool.md  test_classification_tool.py
local_tests/drumscript_lite/: test_local_interface.py
local_tests/mp3_conversion/: test_converter.py
local_tests/pdf_generation/: json_to_pdf.py  test_pdf_generation.py
machine-learning/data_labeller/: data_labeller.ipynb  data_labeller.py
machine-learning/data_labeller/docs/: data_labeller.md
machine-learning/models/: multi_label_drum_classifier_model.h5  multi_label_label_map.json
machine-learning/models/docs/: model_results.md
machine-learning/models/models_development/ConvolutionalNeuralNetworks/: multi_label_scaler.joblib
machine-learning/models/models_development/RandomForest/: drum_classifier_model.joblib  scaler.joblib
models/: label_map.json
models/ConvolutionalNeuralNetworks/: multi_label_drum_classifier_model.h5
notation_generator/: __init__.py  constants.py  drum_notation_tester.py  drum_notation_tester__NEW.py  drum_test_score.musicxml  helpers.py  music21.py  pdf_exporter.py  score_builder.py
output/: my_drum_score3__fri25jul2025.musicxml
public/: drumscript-0.1.1-py3-none-any.whl
scripts/: benchmark_idmt.py  run_tests.sh
tests/: README.md  conftest.py
tests/integration/: test_stem_splitter_real.py
tests/unit/: test_audio_loader.py  test_classify.py  test_helpers.py  test_onset_detector.py  test_stem_splitter_helpers.py  test_tempo_detector.py  test_transcribe.py
theory/: sources.md
utils/: config.py
