[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "DrumScript"
version = "0.1.2"
description = "A Python package to convert drum audio to sheet music."
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9, <=3.13"
authors = [
  { name="drumscript-admin", email="hello.drumscript@gmail.com" }, 
]

keywords = ["drum", "audio", "music", "sheet-music", "notation", "dsp", "machine-learning", "drumscript", "drums", "percussion", "sound analysis", "eq", "atd", "automatic-drum-transcription"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Multimedia :: Sound/Audio :: Players :: MP3",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics"
]

dependencies = [
    "demucs",
    "ipykernel",
    "librosa",
    "matplotlib",
    "mido",
    "music21",
    "numba",
    "numpy<2",
    "pandas",
    "pretty-midi",
    "pydub",
    "pyyaml",
    "reportlab",
    "scikit-learn",
    "scipy",
    "setuptools",
    "sounddevice",
    "soundfile",
    "torch>=2.4,<2.9",
    "torchaudio>=2.4,<2.9",
    "tqdm",
]

  # note that torch only compatible with  Python ABI tags: `cp39`, `cp310`, `cp311`, `cp312`. Not yet compatible with 3.13

[project.urls]
"Repository" = "https://github.com/DrumScript/DrumScript"
"Issues" = "https://github.com//DrumScript/DrumScript/issues"

[project.optional-dependencies]
# COMMENTED OUT: Moved to [dependency-groups] below to follow modern PEP 735 standards for local dev environments.
dev = [
  #"basic-pitch",
  #"basic-pitch[onnx]",
  #"basic-pitch[tf]",
  #"basic-pitch[coreml]",
  #"black",
  #"flake8",
  # "furo",
  "ipykernel",
  "myst-parser",
  "pytest",
  "pytest-cov",
  "shibuya>=2025.10.21",
  "streamlit>=1.50.0",
  "fastapi>=0.128.8",
  "ipywidgets>=8.1.8",
  "mangum>=0.21.0",
  "requests>=2.32.5",
  "ruff>=0.15.11"
 ]




[project.scripts]
drumscript = "drumscript.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# By default, setuptools finds all directories with __init__.py
where = ["."]
include = ["drumscript*"]
exclude = [
    "local_tests*",
    ".development*",
    ".archive/*",
    "machine-learning*",
    "test_audio*",
    "terraform/*",
    "visuals/",
    "outputs/",
    ".testing",
    "*/logs/*",
    "*/proofs/*",
    "*/__pycache__/*"
    ]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["local_tests", "outputs", "docs"]
filterwarnings = [
    # Suppress specific deprecation warnings from audioread/librosa dependencies
    "ignore::DeprecationWarning:audioread.rawread",
    "ignore:'aifc' is deprecated:DeprecationWarning",
    "ignore:'audioop' is deprecated:DeprecationWarning",
    "ignore:'sunau' is deprecated:DeprecationWarning",
]

addopts = "--ignore=local_tests/classification_engine --ignore=local_tests/mp3_conversion --ignore=pdf_generation"

# --- RUFF CONFIGURATION ---
[tool.ruff]
# Set the maximum line length
line-length = 150
# Target Python 3.9 as minimum supported version
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (F), pycodestyle (E, W), isort (I), and pyupgrade (UP)
select = ["E", "F", "W", "I", "UP"]
ignore = []

[tool.ruff.format]
# Enforce double quotes and standard spacing (Black-compatible)
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]

# [FOR FUTURE CONSIDERATION] move o [project.optional-dependencies] below to follow modern PEP 735 standards for local dev environments.
#[dependency-groups]
#dev = [
 #   "ruff>=0.15.11",
 #   "ipykernel",
 #   "myst-parser",
 #   "pytest",
 #   "pytest-cov",
 #   "shibuya>=2025.10.21",
 #   "streamlit>=1.50.0",
 #   "fastapi>=0.128.8",
 #   "ipywidgets>=8.1.8",
 #   "mangum>=0.21.0",
 #   "requests>=2.32.5",
#]


